# Amogus

./: CHANGELOG.md  README.md  amogus.cabal  input.txt  stack.yaml
src/: Main.hs
