cabal-version:       2.2

name:                amogus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/archaversine/amogus#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Archaversine
maintainer:          awbrohl@knox.edu
copyright:           2023 Adam Brohl
category:            Other
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable amogus
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, megaparsec, allen, containers, mtl
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
